Add some products and shopping carts handling functions Add JWT and update some controller odl